add background mode
